--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -20,6 +20,12 @@
 	}
 }
 
+/* 
+	TODO: figure out how to make this not global.
+	It should live on the nav component, 
+	but Svelte optimizes this class away 
+	because the .btn item is passed into the nav.
+*/
 nav .btn:nth-child(2) {
 	border-left: 1px solid rgb(132, 132, 132);
 	border-right: 1px solid rgb(132, 132, 132);
