--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -14,6 +14,12 @@
 	}
 }
 
+@media (max-width: 301px) {
+	.hidden-xxs {
+		display: none !important;
+	}
+}
+
 @media (min-width: 576px) {
 	.visible-xs {
 		display: none !important;
