--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -1,7 +1,3 @@
-/**
- * END CSS RESET
- */
-
 @media (max-width: 767px) {
 	.hidden-sm {
 		display: none !important;
@@ -40,6 +36,8 @@ body {
 	have actual paragraphs of content that need space between them.  So
 	add a top margin to every <p> except the first.
 */
-.caption > p:nth-of-type(n + 2) {
+.caption > p:nth-of-type(n + 2),
+/* Same thing on the Quill WYSIWYG editor */
+.ql-editor > p:nth-of-type(n + 2) {
 	margin-top: 0.7em;
 }
