--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -31,6 +31,11 @@ body {
 	font-size: 16px;
 }
 
+a {
+	color: #337ab7;
+	text-decoration: none;
+}
+
 /* 
 	The CSS reset zeros out all margins.  However, album and photo captions 
 	have actual paragraphs of content that need space between them.  So
