Refactoring where global CSS goes

--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -1,3 +1,61 @@
+/*
+	Per-year styling
+*/
+
+/* default colors for years with no styling of their own */
+.site-container, 
+/* colors for a specific year */
+.site-container[data-year="2022"] {
+	--body-color: #686aab;
+	--header-color: #d2927f;
+	--sidebar-color: #a0838f;
+	--button-color: #e2c1bf;
+	--button-disabled-color: #f1d6d5;
+}
+
+.site-container[data-year='2021'] {
+	--body-color: #94949c;
+	--header-color: #f7de5a;
+	--sidebar-color: #838470;
+	--button-color: #cec68c;
+}
+
+.site-container[data-year='2020'] {
+	--body-color: #144d7f;
+	--header-color: #678ec4;
+	--sidebar-color: #b6c7d3;
+	--button-color: #beb7b3;
+}
+
+.site-container[data-year='2019'] {
+	--body-color: #4a4843;
+	--header-color: #d86b61;
+	--sidebar-color: #a79b83;
+	--button-color: #a65e68;
+}
+
+/*
+	Global styles
+	Almost all styling should be embedded in components, not here
+*/
+
+body {
+	--default-padding: 0.5em;
+	--default-border: solid black 1px;
+	--default-text-color: #333;
+
+	font-family: 'Trebuchet MS', Verdana, Arial, Helvetica, sans-serif;
+	font-size: 16px;
+}
+
+a {
+	color: #337ab7;
+	text-decoration: none;
+}
+
+/*
+	Media queries
+*/
 @media (max-width: 767px) {
 	.hidden-sm {
 		display: none !important;
@@ -20,20 +78,6 @@
 	.visible-xs {
 		display: none !important;
 	}
-}
-
-body {
-	--default-padding: 0.5em;
-	--default-border: solid black 1px;
-	--default-text-color: #333;
-
-	font-family: 'Trebuchet MS', Verdana, Arial, Helvetica, sans-serif;
-	font-size: 16px;
-}
-
-a {
-	color: #337ab7;
-	text-decoration: none;
 }
 
 /* 
