Hourglass overlay over uploading thumbnails

--- a/src/lib/styles/global.css
+++ b/src/lib/styles/global.css
@@ -7,6 +7,8 @@ body {
     --default-padding: 0.5em;
     --default-border: solid black 1px;
     --default-text-color: #333;
+    --thumbnail-width: 200px;
+    --thumbnail-height: 200px;
 
     font-family: 'Trebuchet MS', Verdana, Arial, Helvetica, sans-serif;
     font-size: 16px;
