--- a/src/lib/styles/global.css
+++ b/src/lib/styles/global.css
@@ -56,3 +56,10 @@ a {
 .ql-editor > p:nth-of-type(n + 2) {
     margin-top: 0.7em;
 }
+
+/* 
+    The Quill WYSIWYG editing surface pads lists too much for my taste
+*/
+.ql-bubble .ql-editor ol li {
+    padding-left: 0.2em;
+}
