--- a/src/lib/styles/years.css
+++ b/src/lib/styles/years.css
@@ -3,6 +3,14 @@
 */
 
 .site-container, /* default colors for years with no styling of their own */
+.site-container[data-year='2026'] {
+    --body-color: #f0efeb; /* Cloud Dancer */
+    --header-color: #f5ebc7; /* Lemon Icing */
+    --sidebar-color: #ccd4dc; /* Rainy Nimbus Cloud */
+    --button-color: #ddd3dc; /* Orchid Tint */
+    --month-color: #f5ebc7; /* Lemon Icing */
+}
+
 .site-container[data-year='2025'] {
     --body-color: #9d7967; /* Mocha Mousse */
     --header-color: #efe9e1; /* Gardenia */
